--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # Compiled class file
+*.swp
+.idea/
+.DS_Store
 *.class
 
 # Log file
@@ -21,3 +24,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# intellij
+*.iml
+*.idea
+target
